--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,20 @@ authors = ["Wagner Macedo <wagnerluis1982@gmail.com>"]
 license = "GPL-3.0-or-later"
 readme = "README.md"
 
+packages = [
+    { include = "austro", from = "." }
+]
+
+[tool.poetry.scripts]
+austrosim = "austro:main"
+
 [tool.poetry.dependencies]
 python = "^3.8"
 ply = "^3.11"
 pyqt5 = "^5.15.11"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.5"
 
 [build-system]
 requires = ["poetry-core"]
