--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "austrosim"
-version = "0.1.0"
+version = "0.1.1.dev1"
 description = "A CPU simulator resembling Intel 8086."
 authors = ["Wagner Macedo <wagnerluis1982@gmail.com>"]
 license = "GPL-3.0-or-later"
