--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ license = "GPL-3.0-or-later"
 readme = "README.md"
 
 packages = [
-    { include = "austro", from = "." }
+    { include = "austro", from = "." },
+]
+include = [
+    { path = "pyproject.toml" },
 ]
 
 [tool.poetry.scripts]
-austrosim = "austro:main"
+austrosim = "austro.script:main"
 
 [tool.poetry.dependencies]
 python = "^3.8"
