--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,31 @@
-[tool.poetry]
+[project]
 name = "austrosim"
 version = "0.1.1.dev2"
 description = "A CPU simulator resembling Intel 8086."
-authors = ["Wagner Macedo <wagnerluis1982@gmail.com>"]
-license = "GPL-3.0-or-later"
+authors = [
+    { name = "Wagner Macedo", email = "wagnerluis1982@gmail.com" },
+]
+license = { text = "GPL-3.0-or-later" }
 readme = "README.md"
 
+requires-python = ">=3.9"
+dependencies = [
+    "ply (>=3.11,<4.0)",
+    "pyqt5 (>=5.15.11,<6.0.0)"
+]
+
+[project.scripts]
+austrosim = "austro.script:main"
+
+[tool.poetry]
 packages = [
     { include = "austro", from = "." },
 ]
-
-[tool.poetry.scripts]
-austrosim = "austro.script:main"
-
-[tool.poetry.dependencies]
-python = "^3.9"
-ply = "^3.11"
-pyqt5 = "^5.15.11"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
