--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ packages = [
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
 
+[tool.pytest.ini_options]
+addopts = "--cov=austro --cov-report=term --cov-report html"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
