--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "austrosim"
-version = "0.1.1.dev2"
+version = "0.1.1-dev3"
 description = "A CPU simulator resembling Intel 8086."
 authors = [
     { name = "Wagner Macedo", email = "wagnerluis1982@gmail.com" },
@@ -15,6 +15,9 @@ dependencies = [
 ]
 
 [project.scripts]
+austrosim = "austro.script:main"
+
+[project.gui-scripts]
 austrosim = "austro.script:main"
 
 [tool.poetry]
