--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ pytest-cov = "^6.1.1"
 [tool.pytest.ini_options]
 addopts = "--cov=austro --cov-report=term --cov-report html"
 
+[tool.coverage.report]
+include_namespace_packages = true
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
