coverage cpu.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,12 @@ pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
 
 [tool.pytest.ini_options]
-addopts = "--cov=austro --cov-report=term --cov-report html"
+addopts = "--cov-report=term --cov-report html"
+
+[tool.coverage.run]
+source = [
+    "austro"
+]
 
 [tool.coverage.report]
 include_namespace_packages = true
