--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ line-length = 96
 target-version = "py39"
 
 [tool.ruff.lint]
+extend-select = ["I"]
 unfixable = [
     "ERA", # do not autoremove commented out code
 ]
@@ -48,7 +49,6 @@ unfixable = [
 ban-relative-imports = "all"
 
 [tool.ruff.lint.isort]
-force-single-line = true
 lines-between-types = 1
 lines-after-imports = 2
 known-first-party = ["austro"]
