--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,4 +30,4 @@ jobs:
         python -m pip install .
     - name: Test with pytest
       run: |
-        pytest --cov
+        pytest --cov-reset --cov=austro
