--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,9 +25,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest pytest-cov
-        python -m pip install .
+        pipx install poetry
+        poetry install
     - name: Test with pytest
       run: |
-        pytest --cov-reset --cov=austro
+        poetry run pytest -o addopts='--cov'
