--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,13 +55,11 @@ known-first-party = ["austro"]
 required-imports = ["from __future__ import annotations"]
 
 [tool.pytest.ini_options]
-addopts = "--cov-report=term --cov-report html"
+addopts = "--no-cov-on-fail --cov-report=term --cov-report html"
 testpaths = ["tests"]
 
 [tool.coverage.run]
-source = [
-    "austro"
-]
+source = ["austro"]
 
 [tool.coverage.report]
 include_namespace_packages = true
