--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ packages = [
 pre-commit = "^4.2.0"
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
+mypy = "^1.15.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
