--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,19 +41,29 @@ line-length = 96
 target-version = "py39"
 
 [tool.ruff.lint]
-extend-select = ["I"]
+extend-select = [
+    "I",   # flake8-isort
+    "TID", # flake8-tidy-imports
+    "TC",  # flake8-type-checking
+]
+extend-safe-fixes = [
+    "TC",  # move import from and to TYPE_CHECKING blocks
+]
 unfixable = [
     "ERA", # do not autoremove commented out code
 ]
-
-[tool.ruff.lint.flake8-tidy-imports]
-ban-relative-imports = "all"
 
 [tool.ruff.lint.isort]
 lines-between-types = 1
 lines-after-imports = 2
 known-first-party = ["austro"]
 required-imports = ["from __future__ import annotations"]
+
+[tool.ruff.lint.flake8-tidy-imports]
+ban-relative-imports = "all"
+
+[tool.ruff.lint.flake8-type-checking]
+strict = true
 
 [tool.mypy]
 packages = "austro,tests"
