--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.ruff]
 fix = true
 line-length = 96
-target-version = "py39"
+target-version = "py313"
 
 [tool.ruff.lint]
 extend-select = [
@@ -48,6 +48,9 @@ extend-select = [
 ]
 extend-safe-fixes = [
     "TC",  # move import from and to TYPE_CHECKING blocks
+]
+ignore = [
+    "TC006",
 ]
 unfixable = [
     "ERA", # do not autoremove commented out code
@@ -65,16 +68,16 @@ ban-relative-imports = "all"
 [tool.ruff.lint.flake8-type-checking]
 strict = true
 
-[tool.mypy]
-packages = "austro,tests"
+# [tool.mypy]
+# packages = "austro,tests"
 
-[[tool.mypy.overrides]]
-module = "ply.*"
-follow_untyped_imports = true
+# [[tool.mypy.overrides]]
+# module = "ply.*"
+# follow_untyped_imports = true
 
-[[tool.mypy.overrides]]
-module = "austro.ui.codeeditor"
-disable_error_code = "attr-defined"
+# [[tool.mypy.overrides]]
+# module = "austro.ui.codeeditor"
+# disable_error_code = "attr-defined"
 
 [tool.pytest.ini_options]
 addopts = "--cov-report=term --cov-report html"
