revert commented config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,16 +68,16 @@ ban-relative-imports = "all"
 [tool.ruff.lint.flake8-type-checking]
 strict = true
 
-# [tool.mypy]
-# packages = "austro,tests"
+[tool.mypy]
+packages = "austro,tests"
 
-# [[tool.mypy.overrides]]
-# module = "ply.*"
-# follow_untyped_imports = true
+[[tool.mypy.overrides]]
+module = "ply.*"
+follow_untyped_imports = true
 
-# [[tool.mypy.overrides]]
-# module = "austro.ui.codeeditor"
-# disable_error_code = "attr-defined"
+[[tool.mypy.overrides]]
+module = "austro.ui.codeeditor"
+disable_error_code = "attr-defined"
 
 [tool.pytest.ini_options]
 addopts = "--cov-report=term --cov-report html"
