--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "austrosim"
-version = "0.1.1-dev3"
+version = "0.2.0-alpha1"
 description = "A CPU simulator resembling Intel 8086."
 authors = [
     { name = "Wagner Macedo", email = "wagnerluis1982@gmail.com" },
