--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.13"]
 
     steps:
     - uses: actions/checkout@v4
@@ -30,3 +30,6 @@ jobs:
     - name: Test with pytest
       run: |
         poetry run pytest -o addopts='--cov'
+    - name: Type checking with mypy
+      run: |
+        poetry run mypy
