--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
         poetry install
     - name: Test with pytest
       run: |
-        poetry run pytest -o addopts='--cov'
+        poetry run pytest -o addopts='--cov --no-cov-on-fail'
     - name: Type checking with mypy
       run: |
         poetry run mypy
