--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,12 @@ pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
 mypy = "^1.15.0"
 
+[tool.poetry.group.docs]
+optional = true
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.6.1"
+pymdown-extensions = "^10.15"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
