--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,9 @@ optional = true
 mkdocs = "^1.6.1"
 pymdown-extensions = "^10.15"
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.9"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
