--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,9 @@ site_name: Austro Simulator
 theme:
   name: mkdocs
   highlightjs: true
+  color_mode: auto
+  user_color_mode_toggle: true
+  nav_style: dark
 
 plugins:
   - search
