--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,8 +7,13 @@ theme:
   user_color_mode_toggle: true
   nav_style: dark
 
+extra_css:
+  - style/assembly-ref.css
+
 plugins:
   - search
 
 markdown_extensions:
-  - pymdownx.snippets
+  - pymdownx.snippets:
+      base_path: [".", "docs"]
+      check_paths: true
