update cpu arch page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,3 +17,6 @@ markdown_extensions:
   - pymdownx.snippets:
       base_path: [".", "docs"]
       check_paths: true
+  - pymdownx.caret
+  - pymdownx.extra
+  - pymdownx.blocks.admonition
