--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ theme:
   highlightjs: true
   color_mode: auto
   user_color_mode_toggle: true
+  navigation_depth: 3
   nav_style: dark
 
 extra_css:
@@ -14,9 +15,11 @@ plugins:
   - search
 
 markdown_extensions:
+  - toc:
+      permalink: 🔗
   - pymdownx.snippets:
       base_path: [".", "docs"]
       check_paths: true
-  - pymdownx.caret
-  - pymdownx.extra
-  - pymdownx.blocks.admonition
+  - pymdownx.caret: {}
+  - pymdownx.extra: {}
+  - pymdownx.blocks.admonition: {}
