--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,24 @@
 site_name: Austro Simulator
 
 theme:
-  name: mkdocs
-  highlightjs: true
-  color_mode: auto
-  user_color_mode_toggle: true
-  navigation_depth: 3
-  nav_style: dark
+  name: material
+  features:
+    - toc.integrate
+  palette:
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
 
 extra_css:
   - style/assembly-ref.css
@@ -15,11 +27,19 @@ plugins:
   - search
 
 markdown_extensions:
+  - abbr
   - toc:
-      permalink: 🔗
+      permalink: true
+  - pymdownx.blocks.admonition
+  - pymdownx.blocks.caption
+  - pymdownx.caret
+  - pymdownx.extra
+  - pymdownx.highlight:
+      use_pygments: true
+  - pymdownx.superfences
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.snippets:
       base_path: [".", "docs"]
       check_paths: true
-  - pymdownx.caret: {}
-  - pymdownx.extra: {}
-  - pymdownx.blocks.admonition: {}
