replace pymdownx.extra

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,18 +30,19 @@ plugins:
 markdown_extensions:
   - abbr
   - attr_list
-  - toc:
-      permalink: true
+  - tables
+  - pymdownx.betterem
+  - pymdownx.caret
+  - pymdownx.superfences
   - pymdownx.blocks.admonition
   - pymdownx.blocks.caption
-  - pymdownx.caret
-  - pymdownx.extra
   - pymdownx.highlight:
       use_pygments: true
-  - pymdownx.superfences
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.snippets:
       base_path: [".", "docs"]
       check_paths: true
+  - toc:
+      permalink: true
