--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "ply (>=3.11,<4.0)",
-    "pyqt5 (>=5.15.11,<6.0.0)"
+    "pyqt5 (>=5.15.11,<6.0.0)",
 ]
 
 [project.scripts]
@@ -27,6 +27,8 @@ packages = [
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
+
+[tool.poetry.group.test.dependencies]
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
 mypy = "^1.15.0"
